// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer component tests matches snapshot when closed 1`] = `
<div
  className="footer-background closed"
>
  <div
    className="footer-content"
  >
    <span
      className="item"
      id="profile-button"
      onClick={[Function]}
      role="button"
      tabIndex={0}
      title="Profile"
    >
      <svg
        className="icon"
        fill="#fff"
      >
        <use
          xlinkHref="/static/svglist.svg#profile"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </span>
    <span
      className="item"
      id="search-button"
      onClick={[Function]}
      role="button"
      tabIndex={0}
      title="Search"
    >
      <svg
        className="icon"
        fill="#fff"
      >
        <use
          xlinkHref="/static/svglist.svg#search"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </span>
    <span
      className="item"
      id="notebook-button"
      onClick={[Function]}
      role="button"
      tabIndex={0}
      title="Notebook"
    >
      <svg
        className="icon"
        fill="#fff"
      >
        <use
          xlinkHref="/static/svglist.svg#notebook"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </span>
    <span
      className="item"
      id="settings-button"
      onClick={[Function]}
      role="button"
      tabIndex={0}
      title="Settings"
    >
      <svg
        className="icon"
        fill="#fff"
      >
        <use
          xlinkHref="/static/svglist.svg#text_options"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Footer component tests matches snapshot when open 1`] = `
<div
  className="footer-background"
>
  <div
    className="footer-content"
  >
    <span
      className="item"
      id="profile-button"
      onClick={[Function]}
      role="button"
      tabIndex={0}
      title="Profile"
    >
      <svg
        className="icon"
        fill="#fff"
      >
        <use
          xlinkHref="/static/svglist.svg#profile"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </span>
    <span
      className="item"
      id="search-button"
      onClick={[Function]}
      role="button"
      tabIndex={0}
      title="Search"
    >
      <svg
        className="icon"
        fill="#fff"
      >
        <use
          xlinkHref="/static/svglist.svg#search"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </span>
    <span
      className="item"
      id="notebook-button"
      onClick={[Function]}
      role="button"
      tabIndex={0}
      title="Notebook"
    >
      <svg
        className="icon"
        fill="#fff"
      >
        <use
          xlinkHref="/static/svglist.svg#notebook"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </span>
    <span
      className="item"
      id="settings-button"
      onClick={[Function]}
      role="button"
      tabIndex={0}
      title="Settings"
    >
      <svg
        className="icon"
        fill="#fff"
      >
        <use
          xlinkHref="/static/svglist.svg#text_options"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </span>
  </div>
</div>
`;
